--- a/index.html
+++ b/index.html
@@ -105,6 +105,13 @@
     <a href="https://mercadolivre.com/sec/12yHGLd" class="link-button">kit vonnix</a>
     <a href="https://mercadolivre.com/sec/1WbWVaC" class="link-button">sintra 5L</a>
     <a href="https://mercadolivre.com/sec/2MaAznh" class="link-button">kit alumax, removex</a>
+    <a href="https://mercadolivre.com/sec/1QqkAko" class="link-button">pneu gloss finisher</a>
+    <a href="https://mercadolivre.com/sec/299pheg" class="link-button">intense vonixx</a>
+    <a href="https://mercadolivre.com/sec/2hvyghn" class="link-button">glaco para vidros</a>
+    <a href="https://mercadolivre.com/sec/2vrgtA8" class="link-button">verniz de motor</a>
+    <a href="https://mercadolivre.com/sec/2C75LGs" class="link-button">restautax vonixx</a>
+    <a href="https://mercadolivre.com/sec/1xcK9QP" class="link-button">selante guardian evox</a>
+    <a href="https://mercadolivre.com/sec/1LPNsWb" class="link-button">cera blend vonixx</a>
 
     <footer>
       © 2025 - VAC Recomenda • Links de Confiança
