--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
     <a href="https://mercadolivre.com/sec/2C75LGs" class="link-button">restautax vonixx</a>
     <a href="https://mercadolivre.com/sec/1xcK9QP" class="link-button">selante guardian evox</a>
     <a href="https://mercadolivre.com/sec/1LPNsWb" class="link-button">cera blend vonixx</a>
+    <a href="https://mercadolivre.com/sec/1deRYcV" class="link-button">politriz sgt roto orbital</a>
 
     <footer>
       © 2025 - VAC Recomenda • Links de Confiança
